--- a/PortraitHelper/PortraitHelper.csproj
+++ b/PortraitHelper/PortraitHelper.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Version>1.0.0</Version>
     <OutputPath>..\bin\</OutputPath>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
