Add Config Window and LICENSES.md

--- a/PortraitHelper/PortraitHelper.csproj
+++ b/PortraitHelper/PortraitHelper.csproj
@@ -28,5 +28,6 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Translations.json" />
+    <EmbeddedResource Include="LICENSES.md" />
   </ItemGroup>
 </Project>
